# AutoTraderX

./: .gitignore  MANIFEST.in  README.md  README_tw.md  main.py  quotation_system.py  run_install.bat  setup.cfg  trading_api.py  utils.py  使用範例說明.md
.github/workflows/: pull_request.yml  release.yml
MasterLink_PythonAPI/MasterTradePy/MasterTradePy/32bit/: MasterTradePy-0.0.23-py3-none-win32.whl
MasterLink_PythonAPI/MasterTradePy/MasterTradePy/64bit/: sample.py
MasterLink_PythonAPI/SolPYAPI/: Sample_D.py
MasterLink_PythonAPI/SolPYAPI/Configs/: SYS_SOLACE.ini
MasterTradePy/MasterTradePy/32bit/: sample.py
MasterTradePy/MasterTradePy/64bit/: MasterTradePy-0.0.23-py3-none-win_amd64.whl
Python_tech_analysis/: example.py
SolPYAPI/: PY_TradeD-0.1.15-py3-none-any.whl
autotraderx/: __init__.py  quotation.py  stock.py  trader.py  update_stocks_code.py  utils.py
autotraderx/masterlink/: __init__.py  backtesting.py  quotation.py  trader.py
src/: __init__.py  quotation.py  trader.py  utils.py
subscribed/: 2330.yaml
