[metadata]
name = autotraderx
version = attr: autotraderx.__version__
description = Automatic trading program connected to brokerage Python API.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.8,<=3.10
url = https://github.com/DocsaidLab/AutoTraderX.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
    tqdm
    pyyaml
    natsort
    prettytable

[options.packages.find]
exclude =
    data
    docker
    demo
    docs
    model
    model.*
    tests
    benchmark
    reference
